<resources>
    <string name="app_name">CookBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_myRecipes">My Recipes</string>
    <string name="menu_othersRecipes">Online Recipes</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_createRecipe">Create Recipe</string>

    <string name="authentication_registration_successfull">Registration successfull</string>
    <string name="authentication_login_successfull">Login successfull</string>
    <string name="authentication_logout_successfull">Logout successfull</string>

    <string name="create_recipe_text">Add Recipe</string>
    <string name="create_recipe_gallery_image">Upload image</string>
    <string name="create_recipe_camera_image">Take image</string>
    <string name="create_recipe_title_hint">Title</string>
    <string name="create_recipe_ingredients_hint">Ingredients</string>
    <string name="create_recipe_method_hint">Method</string>
    <string name="create_recipe_success">Recipe uploaded!</string>
    <string name="create_recipe_add_image">Add image before uploading</string>
    <string name="create_recipe_downloadURI_is_null">Something went wrong, please try again later</string>
    <string name="create_recipe_illegal_upload">We are sorry, it seems you either have no internet access, or not logged in. Try again after fixing these problems!</string>

    <string name="nav_header_title_no_auth">Anonymous</string>
    <string name="nav_header_subtitle_no_auth">-</string>

    <string name="fragment_viewpersistentrecipe_uploadBtn">Upload</string>
    <string name="fragment_viewPersistentRecipe_tvIngredientsTitle">Ingredients</string>
    <string name="fragment_viewPersistentRecipe_tvMethodsTitle">How to make it</string>
    <string name="fragment_viewANYRecipe_RecipeBy">Recipe by</string>

    <string name="fragment_viewfirebaserecipe_rateBtn">Like</string>
    <string name="fragment_viewFirebaserecipe_rateMessage">Please only like a recipe once per making</string>


    <string name="fragment_logoutdialog_tvText">Are you sure you want to log out?</string>
    <string name="fragment_logoutdialog_negativeOption">Cancel</string>
    <string name="fragment_logoutdialog_positiveOption">Logout</string>

    <string name="fragment_myrecipes_title">My Recipes</string>
    <string name="fragment_othersrecipes_title">Online Recipes</string>

    <string name="options_menu_persistentrecipefragment_deleteForMyself">Delete recipe for myself</string>
    <string name="options_menu_persistentrecipefragment_deleteForOthers">Delete recipe for others</string>
    <string name="options_menu_persistentrecipefragment_deleteForEveryone">Delete recipe for everyone</string>
    <string name="popup_dialog_deleteForMyself">Sure you want to delete this recipe? (For you only)</string>
    <string name="popup_dialog_deleteForOthers">Sure you want to delete this recipe? (For online only)</string>
    <string name="popup_dialog_deleteForEveryone">Sure you want to delete this recipe? (For everyone)</string>

    <string name="dialog_popup_negativeOption">No</string>
    <string name="dialog_popup_positiveOption">Yes</string>

    <string name="fragment_deleteOnlineRecipeUnauthorizedUser">This recipe belongs to someone else, you cannot delete it from the online recipes</string>
    <string name="fragment_deleteOnlineRecipeNoInternetAccess">You need internet access to delete items</string>
    <string name="toast_deleteOnlineRecipeSuccess">Recipe deleted from online storage</string>
    <string name="toast_deleteOnlineRecipeFailed">Error deleting recipe, check for problems</string>
    <string name="toast_deleteOfflineRecipeSuccess">Recipe deleted from offline storage</string>
    <string name="toast_deleteOfflineRecipeFailed">Error deleting recipe, check for problems</string>

    <string name="popup_notif_like_title">Someone liked your recipe</string>
    <string name="popup_notif_line_login_message">wants to let you know, your recipe is awesome!</string>
    <string name="popup_notif_like_anon_message">Anonymous user wants to let you know, your recipe is awesome!</string>
    <string name="popup_notif_recommend_recipe_title">Try out this awesome recipe!</string>
    <string name="popup_notif_recommend_recipe_message_1">by</string>
    <string name="popup_notif_recommend_recipe_message_2">received</string>
    <string name="popup_notif_recommend_recipe_message_3">likes! Try it for yourself!</string>

</resources>