<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myRecipes"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_myRecipes" />
        <item
            android:id="@+id/nav_othersRecipes"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/menu_othersRecipes" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>