<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_myRecipes">

    <!-- Actually used navigation fragments -->

    <fragment
        android:id="@+id/nav_myRecipes"
        android:name="hu.bme.aut.android.cookbook.ui.myrecipes.MyRecipesFragment"
        android:label="@string/menu_myRecipes"
        tools:layout="@layout/fragment_myrecipes" />

    <fragment
        android:id="@+id/nav_othersRecipes"
        android:name="hu.bme.aut.android.cookbook.ui.othersrecipes.OthersRecipesFragment"
        android:label="@string/menu_othersRecipes"
        tools:layout="@layout/fragment_othersrecipes" />

    <fragment
        android:id="@+id/nav_login"
        android:name="hu.bme.aut.android.cookbook.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="hu.bme.aut.android.cookbook.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_createRecipe"
        android:name="hu.bme.aut.android.cookbook.ui.createrecipe.CreateRecipeFragment"
        android:label="@string/nav_createRecipe"
        tools:layout="@layout/fragment_create_recipe" />
</navigation>