<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/options_menu_persistentrecipefragment_deleteForMyselfOption"
        android:orderInCategory="100"
        android:title="@string/options_menu_persistentrecipefragment_deleteForMyself"
        app:showAsAction="never" />
    <item
        android:id="@+id/options_menu_persistentrecipefragment_deleteForOthersOption"
        android:orderInCategory="100"
        android:title="@string/options_menu_persistentrecipefragment_deleteForOthers"
        app:showAsAction="never" />
    <item
        android:id="@+id/options_menu_persistentrecipefragment_deleteForEveryoneOption"
        android:orderInCategory="100"
        android:title="@string/options_menu_persistentrecipefragment_deleteForEveryone"
        app:showAsAction="never" />
</menu>