<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_recipe_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".ui.createrecipe.CreateRecipeFragment">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:maxHeight="256dp"
            app:layout_constraintBottom_toTopOf="@+id/etTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/create_recipe_title_hint"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/etIngredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_recipe_method_hint"
            app:layout_constraintBottom_toTopOf="@+id/btnImageFromCamera"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/etIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/create_recipe_ingredients_hint"
            app:layout_constraintBottom_toTopOf="@+id/etMethod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/btnImageFromGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe_gallery_image"
            app:layout_constraintBottom_toTopOf="@+id/btnSend"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnImageFromCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe_camera_image"
            app:layout_constraintBottom_toTopOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>